--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "rtlcss": "2.2.1",
     "sass-loader": "6.0.6",
     "scriptjs": "2.5.8",
+    "simple-salesforce": "0.74.2",
     "string-replace-webpack-plugin": "0.1.3",
     "style-loader": "0.18.2",
     "svg-inline-loader": "0.8.0",
